[package]
name = "doppler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tarpc = { version = "0.33.0", features = ["full"] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
